--- a/templates/tts.html
+++ b/templates/tts.html
@@ -15,12 +15,19 @@
             <div class="back-fold"></div>
             <div class="letter">
                 <div class="letter-border"></div>
-                <div class="letter-title"></div>
-                <div class="letter-context"></div>
+                <div class="letter-title">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" placeholder="Your Name">
+                </div>
+                <div class="letter-context">
+                    <label for="subject">Subject:</label>
+                    <input type="text" id="subject" placeholder="Your Wish">
+                </div>
                 <div class="letter-stamp">
                     <div class="letter-stamp-inner"></div>
                 </div>
                 <textarea class="letter-textarea" placeholder="Dear Santa," required></textarea>
+                <button class="cancel-btn">Cancel</button>
             </div>
             <div class="top-fold"></div>
             <div class="body"></div>
