Working on adding music, sparkles, and snow to make it more interactive

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,6 @@
 </head>
 <body>
     <h1>Speak to Santa!</h1>
-    <p>Send a letter to Santa</p>
-    <form action="/generate" method="post">
-        <label for="text">Enter text:</label>
-        <textarea name="text" rows="4" cols="50" placeholder="Merry Christmas!"></textarea>
-        <button type="submit">Get Santa's Message!</button>
-    </form>
     <div class="wrapper">
         <div class="inner" style="--quantity: 10;">
             <div class="card" style="--index: 1; --color-card: 142, 252, 204;">
@@ -51,6 +45,8 @@
             </div>
         </div>
     </div>
+    <a href="/tts"><div><h1>Hi</h1></div></a>
+
     <script src="/static/script.js"></script>
 </body>
 </html>
