Finished creating the css for the countdown. its just a bunch of divs with cubic-bezier lol

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,9 @@
         </div>
     </div>
     <a href="/tts"><div><h1>Hi</h1></div></a>
+    <audio id="bg-music">
+        <source src="/audio/deck-the-halls.mp3">
+    </audio>
 
     <script src="/static/script.js"></script>
 </body>
