--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,7 @@
     --white: #F0F4F8;
     --mono: 'Mountains of Christmas', cursive;
     --serif: 'Playfair Display', serif;
-    --sans: '"Quicksand"', 'sans-serif';
+    --sans: '"Quicksand"', sans-serif;
 }
 
 html, body {
@@ -158,7 +158,7 @@ button:hover {
     pointer-events: none;
     z-index: 10000;
     box-shadow: 0 0 5px var(--gold);
-    animation: sparkleAni 1s forwards;
+    animation: sparkleAni 0.6s forwards;
 }
 
 @keyframes sparkleAni {
