--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -88,6 +88,9 @@
         </div>
         <div class="concept concept-four">
             <h1 class="word">
+                <span class="char">0</span>
+                <span class="char">0</span>
+                <span class="char">:</span>                
                 <span class="char">2</span>
                 <span class="char">4</span>
                 <span class="char">:</span>
@@ -107,5 +110,6 @@
             <i class="icon-social-github icons"></i>
         </a>
     </footer>
+    <script src="/static/countdown.js"></script>
 </body>
 </html>
