--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -102,14 +102,9 @@
             </h1>
         </div>
     </div>
-    <footer>
-        <a href="#" target="_blank">
-            <i class="icon-social-twitter icons"></i>
-        </a>
-        <a href="https://github.com/ryan-mai" target="_blank">
-            <i class="icon-social-github icons"></i>
-        </a>
-    </footer>
+    <audio id="bg-music">
+        <source src="/audio/silent-night.mp3">
+    </audio>
     <script src="/static/countdown.js"></script>
 </body>
 </html>
