--- a/templates/index.html
+++ b/templates/index.html
@@ -17,36 +17,39 @@
                 <div class="img"><img src="https://hips.hearstapps.com/hmg-prod/images/santa-claus-phone-number-6503674995d6a.jpg?crop=0.662xw:1.00xh;0.114xw,0&resize=980:*" alt="Santa Calling"></div>
             </div>
             <div class="card" style="--index: 2; --color-card: 142, 252, 157;">
-                <div class="img"></div>
+                <div class="img"><img src="https://cdn.britannica.com/91/196391-050-AA4AE4BC/room-fireplace-armchair-Christmas-tree-gifts.jpg" alt=""></div>
             </div>
             <div class="card" style="--index: 3; --color-card: 215, 252, 157;">
-                <div class="img"></div>
+                <div class="img"><img src="https://c.tadst.com/gfx/750w/santa-stocking-fireplace-presents-christmas.jpg" alt=""></div>
             </div>
             <div class="card" style="--index: 4; --color-card: 252, 252, 142;">
-                <div class="img"></div>
+                <div class="img"><img src="https://res.cloudinary.com/aenetworks/image/upload/c_fill,ar_2,w_3840,h_1920,g_auto/dpr_auto/f_auto/q_auto:eco/v1/christmas-gettyimages-184652817?_a=BAVAZGID0" alt=""></div>
             </div>
             <div class="card" style="--index: 5; --color-card: 252, 208, 142;">
-                <div class="img"></div>
+                <div class="img"><img src="https://images.squarespace-cdn.com/content/550ed02fe4b00ccc1d9e9000/1482212229806-B6VIV0S3XKA06Q6GEDSU/WinterWonderland-1.jpg?format=1500w&content-type=image%2Fjpeg" alt=""></div>
             </div>
             <div class="card" style="--index: 6; --color-card: 252, 142, 142;">
-                <div class="img"></div>
+                <div class="img"><img src="https://www.vmcdn.ca/f/files/halifaxtoday/images/holidays/112217-christmas-tree-adobestock_54236814.jpeg" alt=""></div>
             </div>
             
             <div class="card" style="--index: 7; --color-card: 252, 142, 239;">
-                <div class="img"></div>
+                <div class="img"><img src="https://media1.popsugar-assets.com/files/thumbor/d6kjK3E6_G9rEg3oT5NJeZ1gYBA=/fit-in/4608x2660/top/filters:format_auto():quality(85):upscale()/2020/01/07/726/n/1922441/419ff9b05e14b139162ef6.64727550_.jpg" alt=""></div>
             </div>
             
             <div class="card" style="--index: 8; --color-card: 204, 142, 252;">
-                <div class="img"></div>
+                <div class="img"><img src="https://roxburyreview.com/wp-content/uploads/2019/12/download.jpeg" alt=""></div>
             </div>
             
             <div class="card" style="--index: 9; --color-card: 142, 202, 252;">
-                <div class="img"></div>
+                <div class="img"><img src="https://miro.medium.com/v2/resize:fit:1400/0*28ul9LTc8IVrUmvH" alt=""></div>
             </div>
         </div>
     </div>
-    <a href="/tts"><div><h1>Hi</h1></div></a>
-    <audio id="bg-music">
+    <div class="button-wrapper">
+        <button><a href="/tts">Speak to Santa</a></button>
+        <button><a href="/countdown">Christmas Countdown</a></button>
+    </div>
+    <audio id="bg-music" loop>
         <source src="/audio/deck-the-halls.mp3">
     </audio>
 
