--- a/templates/tts.html
+++ b/templates/tts.html
@@ -43,6 +43,9 @@
         </div>
         <div class="shadow"></div>
     </div>
+    <audio id="bg-music" loop>
+        <source src="/audio/jingle-bells.mp3">
+    </audio>
     <script src="/static/tts.js"></script>
 </body>
 </html>
