forgot need to add audio into static folder as well

--- a/templates/countdown.html
+++ b/templates/countdown.html
@@ -102,8 +102,8 @@
             </h1>
         </div>
     </div>
-    <audio id="bg-music">
-        <source src="/audio/silent-night.mp3">
+    <audio id="bg-music" loop>
+        <source src="/static/audio/silent-night.mp3">
     </audio>
     <script src="/static/countdown.js"></script>
 </body>
