--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
         <button><a href="/countdown">Christmas Countdown</a></button>
     </div>
     <audio id="bg-music" loop>
-        <source src="/audio/deck-the-halls.mp3">
+        <source src="/static/audio/deck-the-halls.mp3">
     </audio>
 
     <script src="/static/script.js"></script>
