--- a/templates/tts.html
+++ b/templates/tts.html
@@ -44,7 +44,7 @@
         <div class="shadow"></div>
     </div>
     <audio id="bg-music" loop>
-        <source src="/audio/jingle-bells.mp3">
+        <source src="/static/audio/jingle-bells.mp3">
     </audio>
     <script src="/static/tts.js"></script>
 </body>
